@@ -1,5 +1,12 @@
 2007-07-10  Christian Persch  <chpe@gnome.org>
 
+	* lib/widgets/ephy-zoom-action.c: (ephy_zoom_action_class_init):
+	* lib/widgets/ephy-zoom-control.c: (ephy_zoom_control_class_init):
+
+        Port to new tooltips API.
+
+2007-07-10  Christian Persch  <chpe@gnome.org>
+
 	* src/ephy-navigation-action.c: (connect_proxy),
 	(ephy_navigation_action_class_init):
 
